--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lordicon/element": "^1.6.0",
+    "lottie-web": "^5.12.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-text-transition": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
