--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-text-transition": "^3.1.0"
   },
   "devDependencies": {
