--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@lordicon/element": "^1.6.0",
     "aos": "^2.3.4",
     "lottie-web": "^5.12.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-text-transition": "^3.1.0"
+    "react-text-transition": "^3.1.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
